replace immutable collection creation with collection factory call